--- a/tech/docs/.vitepress/theme/output_vitepress.css
+++ b/tech/docs/.vitepress/theme/output_vitepress.css
@@ -534,119 +534,9 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
-/* :root {
-  --vp-home-hero-name-color: blue;
-} */
-
-::after {
-  box-sizing: border-box;
-  /* 1 */
-  border-width: 0;
-  /* 2 */
-  border-style: solid;
-  /* 2 */
-  border-color: #000;
-  /* 2 */
-}
-
-table{
-  display:table !important;
-  width: 100%;
-}
-
-.VPImage {
-  margin-top: 1.25rem;
-}
-
-@media (max-width: 900px) {
-  .VPImage {
-    margin-top: 0px;
-  }
-}
-
-.image-bg {
-  margin-top: 0.5rem;
-}
-
-@media (max-width: 900px) {
-  .image-bg {
-    margin-top: 0px;
-  }
-}
-
-.VPHome {
-  background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
-  --tw-gradient-from: rgb(16 185 129 / 0.3) var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(16 185 129 / 0) var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-  --tw-gradient-to: rgb(236 253 245 / 0)  var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), rgb(236 253 245 / 0.1) var(--tw-gradient-via-position), var(--tw-gradient-to);
-  --tw-gradient-to: #fff var(--tw-gradient-to-position);
-}
-
-:is(.dark .VPHome) {
-  background-image: none;
-}
-
-.VPFeatures .title {
-  color: #21635ce4;
-}
-
-.VPButton{
-  border: none !important;
-  --tw-text-opacity: 1;
-  color: rgb(62 183 170 / var(--tw-text-opacity));
-}
-
 :root {
-  --vp-home-hero-image-filter: blur(56px);
-  --vp-home-hero-image-background-image: linear-gradient(-45deg, rgba(36, 255, 62, 0.646) 30%, rgba(255, 183, 120, 0.6) 10%);
-  --vp-home-hero-name-color: transparent;
-  --vp-home-hero-name-background: #369b91;
-  --vp-c-text-2: #30a79b;
-  --vp-button-alt-border: none;
-  --vp-button-alt-hover-border: none;
-  --vp-button-alt-hover-bg: #369b913c;
-  --vp-button-alt-text: #3eb7aa;
-  --vp-button-alt-hover-text: #3eb7aa;
-  --vp-button-brand-bg: #2ea599a9;
-  --vp-button-brand-hover-bg: #369b91;
-  --vp-c-brand: #2b6f5d;
-  --vp-c-brand-light: #3eb7ab6d;
-  --vp-c-brand-lighter: #3eb7ab46;
-}
-
-/* .VPHomeHero .container{
-  max-width: 960px !important;
-  @apply pt-[30px] sm:pt-0
-}
-.VPHomeFeatures .container{
-  max-width: 960px !important;
-} */
-
-.VPHomeHero .text {
-  padding-bottom: 0.5rem;
-  padding-top: 0.5rem;
-  line-height: 70px;
-  color: #2da79b9a;
-}
-
-@media (max-width: 900px) {
-  .VPHomeHero .text {
-    line-height: 40px;
-  }
-}
-
-.VPButton {
-  border-radius: 0.5rem;
-}
-
-::-webkit-scrollbar {
-  display: none;
-}
-
-::-webkit-scrollbar-thumb {
-  display: none;
+  --vp-c-brand-1: #a4a4a4;
+  --vp-c-brand-2: #888;
 }
 
 .VPContent{
