--- a/tech/docs/.vitepress/theme/input.css
+++ b/tech/docs/.vitepress/theme/input.css
@@ -3,77 +3,10 @@
 @tailwind utilities;
 
 
-/* :root {
-  --vp-home-hero-name-color: blue;
-} */
-::after {
-  box-sizing: border-box;
-  /* 1 */
-  border-width: 0;
-  /* 2 */
-  border-style: solid;
-  /* 2 */
-  border-color: #000;
-  /* 2 */
-}
-table{
-  display:table !important;
-  @apply w-full;
-}
-.VPImage {
-  @apply mt-5 sm:mt-0
-}
-.image-bg{
-  @apply sm:mt-0 mt-2;
-}
-.VPHome{
-  @apply bg-gradient-to-b from-emerald-500/30 via-emerald-50/10 to-white dark:bg-none 
-}
-
-.VPFeatures .title{
-  @apply text-[#21635ce4]
-}
-.VPButton{
-  border: none !important;
-  @apply text-[#3eb7aa];
-}
 :root {
-  --vp-home-hero-image-filter: blur(56px);
-  --vp-home-hero-image-background-image: linear-gradient(-45deg, rgba(36, 255, 62, 0.646) 30%, rgba(255, 183, 120, 0.6) 10%);
-  --vp-home-hero-name-color: transparent;
-  --vp-home-hero-name-background: #369b91;
-  --vp-c-text-2: #30a79b;
-  --vp-button-alt-border: none;
-  --vp-button-alt-hover-border: none;
-  --vp-button-alt-hover-bg: #369b913c;
-  --vp-button-alt-text: #3eb7aa;
-  --vp-button-alt-hover-text: #3eb7aa;
-  --vp-button-brand-bg: #2ea599a9;
-  --vp-button-brand-hover-bg: #369b91;
-  --vp-c-brand: #2b6f5d;
-  --vp-c-brand-light: #3eb7ab6d;
-  --vp-c-brand-lighter: #3eb7ab46;
+  --vp-c-brand-1: #a4a4a4;
+  --vp-c-brand-2: #888;
 }
-/* .VPHomeHero .container{
-  max-width: 960px !important;
-  @apply pt-[30px] sm:pt-0
-}
-.VPHomeFeatures .container{
-  max-width: 960px !important;
-} */
-.VPHomeHero .text{
-  @apply  text-[#2da79b9a] pb-2 pt-2 leading-[70px] sm:leading-[40px]
-}
-.VPButton{
-  @apply rounded-lg
-}
-::-webkit-scrollbar {
-  @apply hidden
-}
-::-webkit-scrollbar-thumb {
-  @apply hidden
-}
-
 .VPContent{
   width: screen;
   overflow-x: hidden;
