--- a/tech/docs/.vitepress/theme/input.css
+++ b/tech/docs/.vitepress/theme/input.css
@@ -4,8 +4,8 @@
 
 
 :root {
-  --vp-c-brand-1: #a4a4a4;
-  --vp-c-brand-2: #888;
+  --vp-c-brand-1: #858585;
+  --vp-c-brand-2: #cbcbcb;
 }
 .VPContent{
   width: screen;
