--- a/tech/docs/.vitepress/theme/output_vitepress.css
+++ b/tech/docs/.vitepress/theme/output_vitepress.css
@@ -535,8 +535,8 @@ video {
 }
 
 :root {
-  --vp-c-brand-1: #a4a4a4;
-  --vp-c-brand-2: #888;
+  --vp-c-brand-1: #858585;
+  --vp-c-brand-2: #cbcbcb;
 }
 
 .VPContent{
