--- a/tech/docs/.vitepress/theme/output_vitepress.css
+++ b/tech/docs/.vitepress/theme/output_vitepress.css
@@ -543,3 +543,15 @@ video {
   width: screen;
   overflow-x: hidden;
 }
+
+.VPSidebarItem .item .text {
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 1;
+}
+
+::-webkit-scrollbar {
+  display: none;
+  /* Chrome Safari */
+}
