--- a/tech/docs/.vitepress/theme/input.css
+++ b/tech/docs/.vitepress/theme/input.css
@@ -14,6 +14,9 @@
 .VPSidebarItem .item .text{
   @apply line-clamp-1
 }
+.VPNavScreenMenuGroupSection .link {
+  @apply line-clamp-1
+}
 ::-webkit-scrollbar {
   display: none; /* Chrome Safari */
 }
