--- a/tech/docs/.vitepress/theme/output_vitepress.css
+++ b/tech/docs/.vitepress/theme/output_vitepress.css
@@ -551,6 +551,13 @@ video {
   -webkit-line-clamp: 1;
 }
 
+.VPNavScreenMenuGroupSection .link {
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 1;
+}
+
 ::-webkit-scrollbar {
   display: none;
   /* Chrome Safari */
