--- a/home/src/app/globals.css
+++ b/home/src/app/globals.css
@@ -6,12 +6,14 @@
   font-family: "Noto Sans SC";
 } */
 
-/* :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+body {
+  @apply min-h-screen bg-black;
+  background-size: 100px;
+
 }
 
+
+/* 
 @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
