--- a/notebook/docs/.vitepress/theme/output_vitepress.css
+++ b/notebook/docs/.vitepress/theme/output_vitepress.css
@@ -575,3 +575,15 @@ video {
     width: 100%;
   }
 }
+
+.VPNavBarTitle .title{
+  font-family: 'Liu Jian Mao Cao';
+  font-size: 25px;
+}
+
+@media (max-width: 900px) {
+  .VPNavBarTitle .title {
+    margin-left: -7px;
+    font-size: 30px;
+  }
+}
