--- a/notebook/docs/.vitepress/theme/input.css
+++ b/notebook/docs/.vitepress/theme/input.css
@@ -2,6 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
+body{
+  @apply duration-500
+}
 
 :root {
   --vp-c-brand-1: #858585;
@@ -25,7 +28,7 @@
   @apply w-1/3 float-right  ml-2 sm:float-none sm:w-full
 }
 
-.VPNavBarTitle .title{
-  font-family: 'Liu Jian Mao Cao';
-  @apply text-[25px] sm:text-[30px] sm:-ml-[7px];
+
+body{
+  font-family: 'Noto Serif SC';
 }
