--- a/notebook/docs/.vitepress/theme/output_vitepress.css
+++ b/notebook/docs/.vitepress/theme/output_vitepress.css
@@ -534,6 +534,10 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
+body {
+  transition-duration: 500ms;
+}
+
 :root {
   --vp-c-brand-1: #858585;
   --vp-c-brand-2: #cbcbcb;
@@ -576,14 +580,6 @@ video {
   }
 }
 
-.VPNavBarTitle .title{
-  font-family: 'Liu Jian Mao Cao';
-  font-size: 25px;
-}
-
-@media (max-width: 900px) {
-  .VPNavBarTitle .title {
-    margin-left: -7px;
-    font-size: 30px;
-  }
+body{
+  font-family: 'Noto Serif SC';
 }
