--- a/life/themes/hugo-bearblog-local/layouts/partials/style.html
+++ b/life/themes/hugo-bearblog-local/layouts/partials/style.html
@@ -12,6 +12,10 @@
     color: #444;
   }
 
+    .header{
+      color:black;
+    }
+
   h1,
   h2,
   h3,
@@ -150,8 +154,12 @@
 
   @media (prefers-color-scheme: dark) {
     body {
-      background-color: #333;
+      background-color: #000;
       color: #ddd;
+    }
+
+    .header{
+      color:white;
     }
 
     h1,
