--- a/life/themes/hugo-bearblog-local/layouts/partials/header.html
+++ b/life/themes/hugo-bearblog-local/layouts/partials/header.html
@@ -1,6 +1,6 @@
 <link rel="stylesheet"
   href="https://fonts.googleapis.com/css?family=Liu+Jian+Mao+Cao">
 <a href="{{ "" | relURL }}" class="title">
-  <div style="font-family: 'Liu Jian Mao Cao' ;font-size: 50px; margin-left: -10px; margin-bottom: 10px; color:black">{{ .Site.Title }}</div>
+  <div class="header" style="font-family: 'Liu Jian Mao Cao' ;font-size: 50px; margin-left: -10px; margin-bottom: 10px;">{{ .Site.Title }}</div>
 </a>
 <nav>{{- partial "nav.html" . -}}</nav>
