--- a/notebook/docs/.vitepress/theme/output_vitepress.css
+++ b/notebook/docs/.vitepress/theme/output_vitepress.css
@@ -535,8 +535,8 @@ video {
 }
 
 :root {
-  --vp-c-brand-1: none;
-  --vp-c-brand-2: #888;
+  --vp-c-brand-1: #56004f;
+  --vp-c-brand-2: #801dae;
 }
 
 .VPContent{
