--- a/notebook/docs/.vitepress/theme/output_vitepress.css
+++ b/notebook/docs/.vitepress/theme/output_vitepress.css
@@ -590,6 +590,23 @@ body{
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
+.VPSidebar {
+  padding-top: 1rem !important;
+}
+
+.VPNavBar {
+  padding-right: 1rem !important;
+}
+
+:is(.dark .VPNavBar) {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity)) !important;
+}
+
+.VPNavBarTitle .title {
+  display: none;
+}
+
 :is(.dark .VPNavBar .content-body) {
   --tw-bg-opacity: 1 !important;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity)) !important;
