--- a/notebook/docs/.vitepress/theme/output_vitepress.css
+++ b/notebook/docs/.vitepress/theme/output_vitepress.css
@@ -554,8 +554,14 @@ video {
 }
 
 ::-webkit-scrollbar {
-  display: none;
-  /* Chrome Safari */
+  width: 0.5rem;
+  border-radius: 0.125rem;
+  background-image: none;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 0.125rem;
+  background-color: rgb(209 213 219 / 0.5);
 }
 
 .img-program-sdu-2022 {
@@ -595,8 +601,7 @@ body{
 }
 
 :is(.dark .VPNavBar) {
-  --tw-bg-opacity: 1 !important;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity)) !important;
+  background-color: unset !important;
 }
 
 .VPNavBarTitle .title {
