--- a/notebook/docs/.vitepress/theme/input.css
+++ b/notebook/docs/.vitepress/theme/input.css
@@ -2,6 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
+.test{
+  @apply hidden sm:block;
+}
 
 .VPContent{
   width: screen;
@@ -15,12 +18,12 @@
 }
 
 ::-webkit-scrollbar{
-    @apply w-2 bg-none rounded-sm
+    @apply w-2 bg-none rounded-sm hover:cursor-move
 }
 
 ::-webkit-scrollbar-thumb
 {
-    @apply rounded-sm bg-gray-300/50;
+    @apply rounded-sm bg-gray-500/10 hover:bg-gray-500/20 hover:cursor-move active:bg-gray-500/30;
 }
 
 .img-program-sdu-2022{
@@ -34,8 +37,6 @@
 .VPHome .VPNavBarTitle{
   @apply hidden
 }
-
-
 
 body{
   font-family: 'Noto Serif SC' !important ;
