--- a/home/src/app/globals.css
+++ b/home/src/app/globals.css
@@ -7,7 +7,7 @@
 } */
 
 .container{
-  @apply dark:text-white text-center items-center w-full justify-center text-9xl h-full m-auto sm:mt-10
+  @apply dark:text-white text-center items-center w-full justify-center  h-full m-auto sm:mt-10
 }
 
 body {
@@ -19,7 +19,7 @@ li{
 }
 
 li .goto{
-  @apply leading-relaxed hover:scale-105 hover:drop-shadow-[0_0_5px_rgba(0,0,0,0.4)] dark:hover:drop-shadow-[0_0_10px_rgba(255,255,255,1)]  duration-700 w-fit m-auto
+  @apply text-9xl xs:leading-tight sm:leading-snug leading-normal hover:scale-105 hover:drop-shadow-[0_0_5px_rgba(0,0,0,0.4)] dark:hover:drop-shadow-[0_0_10px_rgba(255,255,255,1)]  duration-700 w-fit m-auto
 }
 
 .jupyter{
