--- a/home/src/app/globals.css
+++ b/home/src/app/globals.css
@@ -7,11 +7,11 @@
 } */
 
 .container{
-  @apply dark:text-white text-center items-center w-full justify-center  h-full m-auto sm:mt-10
+  @apply dark:text-white text-center items-center w-full justify-center m-auto sm:mt-10 mb-5
 }
 
 body {
-  @apply dark:bg-black items-center justify-center sm:mt-[100px] mt-[50px] lg:mt-[120px] overflow-hidden;
+  @apply dark:bg-black items-center justify-center sm:mt-[100px] mt-[50px] lg:mt-[120px] ;
 }
 
 li{
