--- a/notebook/docs/.vitepress/theme/input.css
+++ b/notebook/docs/.vitepress/theme/input.css
@@ -18,7 +18,7 @@
 }
 
 ::-webkit-scrollbar{
-    @apply w-2 bg-none rounded-sm hover:cursor-move
+    @apply sm:hidden w-4 bg-none rounded-sm hover:cursor-move
 }
 
 ::-webkit-scrollbar-thumb
