--- a/home/src/app/globals.css
+++ b/home/src/app/globals.css
@@ -2,34 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
-/* body{
-  font-family: "Noto Sans SC";
-} */
-
-.container{
-  @apply dark:text-white text-center items-center w-full justify-center m-auto sm:mt-10 mb-5
-}
-
 body {
-  @apply dark:bg-black items-center justify-center sm:mt-[100px] mt-[50px] lg:mt-[120px] ;
-}
-
-li{
-  @apply w-full
-}
-
-li .goto{
-  @apply text-[240px] md:text-[192px] sm:text-[128px] lg:text-[292px]  hover:scale-105 hover:drop-shadow-[0_0_5px_rgba(0,0,0,0.4)] dark:hover:drop-shadow-[0_0_10px_rgba(255,255,255,1)]  duration-700 w-fit m-auto
-}
-
-.jupyter{
-  @apply  absolute w-14 sm:w-8 bottom-10 right-10 opacity-10 hover:opacity-60 z-10 duration-500
-}
-
-.footer{
-  @apply fixed top-10 right-20 m-auto text-black dark:text-white text-left text-xl
+  @apply dark:bg-black pt-[10%] sm:pt-[15%];
 }
 
 .theMenu{
-  @apply absolute right-10 top-10 sm:right-5 sm:top-5 z-10
+  @apply fixed float-right right-10 top-10 z-10 sm:right-5
 }
