--- a/home/src/app/globals.css
+++ b/home/src/app/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 body {
-  @apply dark:bg-black pt-[10%] sm:pt-[15%];
+  @apply select-none min-h-screen dark:bg-gradient-to-br via-purple-800 from-blue-600 to-purple-900 pt-[10%] sm:pt-[15%];
 }
 
 .theMenu{
