--- a/home/src/app/globals.css
+++ b/home/src/app/globals.css
@@ -3,9 +3,14 @@
 @tailwind utilities;
 
 body {
-  @apply select-none min-h-screen dark:bg-gradient-to-br via-purple-800 from-blue-600 to-purple-900 pt-[10%] sm:pt-[15%];
+  @apply  min-h-screen dark:bg-gradient-to-br via-purple-800 from-blue-600 to-purple-900 pt-[10%] sm:pt-[15%];
 }
+/* select-none */
 
 .theMenu{
   @apply fixed float-right right-10 top-10 z-10 sm:right-5
+}
+
+span{
+  @apply p-0
 }
